--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "movie-fun",
   "version": "0.1.0",
   "private": true,
+  "main": "server/",
+  "proxy": "http://localhost:4000",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
